# gTest-minimal-example

./: CMakeLists.txt  README.adoc  README.md  client.hpp  client_tests.cpp
